--- a/sample/1.create_and_run_agent.ipynb
+++ b/sample/1.create_and_run_agent.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "cc21b683",
    "metadata": {},
    "outputs": [
@@ -154,9 +154,7 @@
      "output_type": "stream",
      "text": [
       "🏴‍☠️ 해적 농담:\n",
-      "해적이 배에서 계산기를 꺼내 들면서 뭐라고 했을까요?\n",
-      "\n",
-      "“이건 내 보물 계산기야, 숫자마다 금은보화가 숨겨져 있거든!” 🏴‍☠️😂\n"
+      "해적이 가장 좋아하는 알파벳이 뭘까? 많은 사람이 \"R\"이라고 생각하지만, 해적이 진짜 사랑하는 건 \"C(씨)\"야—왜냐하면 그는 바다(씨)를 사랑하거든!\n"
      ]
     }
    ],
@@ -179,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "id": "89a6a235",
    "metadata": {},
    "outputs": [
@@ -187,12 +185,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Why did the pirate go did the pirate go to school?\n",
-      "\n",
-      "To to school?\n",
-      "\n",
-      "To improve his “arrrrrrrrr improve his “arrrrrrrrrr-tr-ticulationiculation”!\n",
-      "”!\n"
+      "Why couldn't the pirate learn the alphabet? Because he kept getting lost at C.\n"
      ]
     }
    ],
@@ -213,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "45ccc50f",
    "metadata": {},
    "outputs": [
@@ -221,7 +214,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "얼굴은 안 보이지만, 저렇게 빛나는 머리카락을 보니 '헤어지는 얘기'도 빛나게 해주겠네요! 머리카락이 너무 반짝여서 혹시 '헤어' 관련 마법이라도 부린 건 아닐까요? 😄\n"
+      "- 머리는 완벽하게 세팅됐는데 얼굴은 프라이버시 모드… VIP 전용 프로필이네!\n",
+      "- 조명: 드라마틱, 헤어: 패션 잡지, 얼굴: '오늘은 휴가 중입니다.'\n",
+      "- 모델이 말하길: \"얼굴은 예약제로 운영합니다. 예약은 불가합니다.\"\n"
      ]
     }
    ],
@@ -242,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "id": "7cdaead2",
    "metadata": {},
    "outputs": [
@@ -250,13 +245,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This image shows the side profile of a person with their hair sleekly pulled back. The lighting is dramatic with bright highlights on the hair and neck, creating striking contrasts. The face area is blurred, but the visible parts suggest a portrait photo taken in a studio setting with artistic use of shadows. \n",
-      "\n",
-      "And here's a lighthearted joke to brighten the mood:\n",
-      "\n",
-      "Why don't scientists trust atoms?\n",
-      "\n",
-      "Because they make up everything!\n"
+      "A high-contrast black-and-white portrait of a person from the shoulders up with a square blur covering the face. Their hair is slicked back smoothly, the ear and long eyelashes on the right side are visible, and the neck and collarbone catch dramatic side lighting that creates a strong shadow on the left. The background is plain and the overall composition feels like a stylized studio shot — someone really wanted to stay mysterious.\n"
      ]
     }
    ],
@@ -390,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "f1177467",
    "metadata": {},
    "outputs": [],
@@ -410,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "b88efa42",
    "metadata": {},
    "outputs": [
@@ -418,7 +407,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "서울은 현재 흐리고 최고기온은 약 15°C예요. 지금은 쌀쌀하게 느껴질 수 있으니 가벼운 자켓이나 겉옷을 챙기세요. 비 예보는 없지만 정확한 시간별/주간 예보가 필요하면 알려드릴게요. 원하나요?\n"
+      "현재 서울은 흐리고 오늘 최고 기온은 약 15°C예요. 가벼운 외투를 권장드립니다. 더 자세한 시간별 예보나 다른 도시 날씨도 알려드릴까요?\n"
      ]
     }
    ],
@@ -440,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "69498b0a",
    "metadata": {},
    "outputs": [],
@@ -467,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "ea972a30",
    "metadata": {},
    "outputs": [
@@ -475,7 +464,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "현재 서울은 흐리고 오늘 최고기온은 15°C입니다. 시간별이나 주간 예보, 체감온도 등 더 알고 싶으시면 말씀해 주세요.\n"
+      "서울은 흐리고 낮 최고 기온은 약 15°C입니다. 가벼운 외투를 하나 걸치시는 게 좋고, 현재로선 강한 비는 없어 보입니다. 시간별 예보나 미세먼지·강수 확률 등 더 자세한 정보 원하시면 말씀해 주세요.\n"
      ]
     }
    ],
@@ -513,6 +502,116 @@
    "outputs": [],
    "source": [
     "## 아직 파이썬에는 구현되지 않은 기능"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7bb7fdb7",
+   "metadata": {},
+   "source": [
+    "## 10. Structured Output 사용하기\n",
+    "https://learn.microsoft.com/en-us/agent-framework/tutorials/agents/structured-output?pivots=programming-language-python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "9f569ace",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pydantic import BaseModel\n",
+    "\n",
+    "class PersonInfo(BaseModel):\n",
+    "    \"\"\"Information about a person.\"\"\"\n",
+    "    name: str | None = None\n",
+    "    age: int | None = None\n",
+    "    occupation: str | None = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a5bc5a27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from agent_framework.azure import AzureOpenAIChatClient\n",
+    "from azure.identity import AzureCliCredential\n",
+    "\n",
+    "# Create the agent using Azure OpenAI Chat Client\n",
+    "agent = AzureOpenAIChatClient(credential=AzureCliCredential()).create_agent(\n",
+    "    name=\"HelpfulAssistant\",\n",
+    "    instructions=\"You are a helpful assistant that extracts person information from text.\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "e735a387",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"Please provide information about John Smith, who is a 35-year-old software engineer.\"\n",
+    "response = await agent.run(\n",
+    "    query,\n",
+    "    response_format=PersonInfo\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "d6eaf08b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: John Smith, Age: 35, Occupation: Software engineer\n"
+     ]
+    }
+   ],
+   "source": [
+    "if response.value:\n",
+    "    person_info = response.value\n",
+    "    print(f\"Name: {person_info.name}, Age: {person_info.age}, Occupation: {person_info.occupation}\")\n",
+    "else:\n",
+    "    print(\"No structured data found in response\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "537efcb9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: John Smith, Age: 35, Occupation: Software engineer\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Streaming 응답을 수집하여 최종 구조화된 응답을 얻는 방법. \n",
+    "# Streaming 응답이 다 나올때까지 기다린 후 하나로 합쳐서 최종 AgentRunResponse를 만듭니다.\n",
+    "\n",
+    "from agent_framework import AgentRunResponse\n",
+    "\n",
+    "# Get structured response from streaming agent using AgentRunResponse.from_agent_response_generator\n",
+    "# This method collects all streaming updates and combines them into a single AgentRunResponse\n",
+    "final_response = await AgentRunResponse.from_agent_response_generator(\n",
+    "    agent.run_stream(query, response_format=PersonInfo),\n",
+    "    output_format_type=PersonInfo,\n",
+    ")\n",
+    "\n",
+    "if final_response.value:\n",
+    "    person_info = final_response.value\n",
+    "    print(f\"Name: {person_info.name}, Age: {person_info.age}, Occupation: {person_info.occupation}\")"
    ]
   }
  ],
