--- a/sample/3.1.azure_agent_mgmt.ipynb
+++ b/sample/3.1.azure_agent_mgmt.ipynb
@@ -82,10 +82,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "4ea5ea39",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🏴‍☠️ 해적 농담:\n",
+      "왜 해적은 영어 시험을 항상 망칠까?  \n",
+      "답마다 'R'만 가득 쓰거든—해적은 늘 \"Arrr!\"만 하니까.\n"
+     ]
+    }
+   ],
    "source": [
     "# Jupyter 노트북에서는 이렇게 실행합니다 (asyncio.run() 없이)\n",
     "result = await agent.run(\"Tell me a joke about a pirate. 한국말로 해줘\")\n",
